--- a/login-page-front/src/app/components/default-login-layout/default-login-layout.component.html
+++ b/login-page-front/src/app/components/default-login-layout/default-login-layout.component.html
@@ -1,15 +1,20 @@
 <main>
-  <section class="form-section" >
-    <img src="/logo.jpg" alt="logo"/>
+  <section class="form-section">
+    <img src="/logo.jpg" alt="logo" />
     <h2>{{title}}</h2>
-    <button></button>
-    <div>
-      <span>or</span>
+    <div class="btn-wrapper">
+      <button class="btn-primary">{{primaryBtnText}}</button>
+      <div class="divider">
+        <div></div>
+          <span>OR</span>
+        <div></div>
+      </div>
+      <button class="btn-secondary">{{secondaryBtnText}}</button>
     </div>
-    <button></button>
+
   </section>
 
-<section class="main-section" >
+  <section class="main-section">
     <h1>You should moveIt!</h1>
     <img src="/main-illustration.svg" alt="illustration">
   </section>
