--- a/login-page-front/src/app/pages/login/login.component.html
+++ b/login-page-front/src/app/pages/login/login.component.html
@@ -1,7 +1,7 @@
 <app-default-login-layout
   title="LogIn into your account"
-  primatuBtnText=""
-  secondaryBtnText=""
+  primaryBtnText="Login now"
+  secondaryBtnText="SignUp now"
 >
 
 
