--- a/login-page-front/src/app/components/default-login-layout/default-login-layout.component.scss
+++ b/login-page-front/src/app/components/default-login-layout/default-login-layout.component.scss
@@ -7,6 +7,7 @@ main {
   justify-content: center;
   height: 100%;
 
+
   section {
       height: 100%;
       display: flex;
@@ -19,12 +20,75 @@ main {
       gap: 8px;
 
       flex-grow: 1;
-      background-color:   $backgroung-color;
+      background-color: $grey-color;
   }
 
   .form-section {
       flex-grow: 0.3;
       padding: 0 35px;
+      gap: 32px;
     }
+
+    img {
+      margin-bottom: 28px;
+    }
+
+    h2{
+      font-size: 20px;
+      font-weight: bold;
+      margin-bottom: 45px;
+    }
+
+    .btn-wrapper{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      gap: 24px;
+
+      .divider{
+        display: flex;
+        align-items: center;
+        gap: 8px;
+        font-size: 16px;
+        color: $grey-color;
+        font-weight: 400;
+        width: 100%;
+
+        div{
+          width: 100%;
+          min-width: 40px;
+          height: 2px;
+          background-color: $grey-color;
+        }
+      }
+
+
+      button{
+        width: 100%;
+        border-radius: 8px;
+        font-size: 16px;
+        font-weight: 500;
+        border: none;
+        background: transparent;
+        padding: 12px 24px;
+        cursor: pointer;
+
+        &.btn-primary{
+          background-color: $primary-color;
+          color: white;
+          box-shadow:0px 8px 12px rgba(148.23004603385925, 64.33935597538948, 255, 0.20000000298023224);
+        }
+
+        &.btn-secondary{
+          border: 1px solid $primary-color;
+          color: $primary-color;
+        }
+      }
+
+    }
+
+
 
   }
