--- a/login-page-front/src/app/components/default-login-layout/default-login-layout.component.html
+++ b/login-page-front/src/app/components/default-login-layout/default-login-layout.component.html
@@ -2,6 +2,8 @@
   <section class="form-section">
     <img src="/logo.jpg" alt="logo" />
     <h2>{{title}}</h2>
+    <ng-content></ng-content>
+
     <div class="btn-wrapper">
       <button class="btn-primary">{{primaryBtnText}}</button>
       <div class="divider">
